--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,13 +1,13 @@
 <h1>Add new task</h1>
 
-<%#= render 'form', task: @task %>
+<%= render 'form', task: @task %>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :details %>
-  <%= f.text_field :details %>
-  <%= f.submit %>
-<% end %>
+<%#= form_for(@task) do |f| %>
+  <%#= f.label :title %>
+  <%#= f.text_field :title %>
+  <%#= f.label :details %>
+  <%#= f.text_field :details %>
+  <%#= f.submit %>
+<%# end %>
 
 <%= link_to 'Back to list', tasks_path %>
