--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
 
+<p><input type="checkbox" <%= 'checked' if @task.completed %>>
+<%= @task.completed ? 'This task is completed' : 'This task is not completed yet' %>
+</p>
+
 <%= link_to 'Edit this task', edit_task_path %>
+<br>
 <%= link_to 'Back to list', tasks_path %>
