--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,7 +12,7 @@
 
   <% if !task.new_record? %>
     <p>
-    <%= form.label :completed %>
+    <%= form.label 'Mark task completed' %>
     <%= form.check_box :completed %>
     </p>
   <% end %>
