--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,16 +1,34 @@
 <h1>My tasks</h1>
 
-<% @tasks.each do |task| %>
-  <span><input type="checkbox" <%= 'checked' if task.completed %>><%= link_to(task.title, task_path(task)) %></span>
-  <span><%= link_to task_path(task), method: :delete, data: { confirm: 'Are you sure?' } do %>
-  <i class="far fa-trash-alt"></i>
+<p>
+  <% @tasks.each do |task| %>
+    <p>
+      <% if task.completed %>
+        <i class="far fa-check-square"></i>
+      <% else %>
+        <i class="far fa-square"></i>
+      <% end %>
+      <%= link_to task.title, task_path(task) %>
+      <%= link_to task_path(task), method: :delete, data: { confirm: 'Are you sure?' } do %>
+        <i class="fas fa-trash"></i>
+      <% end %>
+    </p>
   <% end %>
-  </span>
-  <br>
-<% end %>
+</p>
+
+<%# @tasks.each do |task| %>
+  <%# <span><input type="checkbox" <%= 'checked' if task.completed %><%#= link_to(task.title, task_path(task)) %> 
+  <%# correct line above if using this part again %>
+  <%# </span> %>
+  <%# <span>= link_to task_path(task), method: :delete, data: { confirm: 'Are you sure?' } do %>
+  <%# <i class="far fa-trash-alt"></i> %>
+  <%# end %>
+  <%# </span>
+  <br> %>
+<%# end %>
 
 <%= link_to new_task_path do %>
-<i class="fas fa-plus">Add new task</i>
+  <i class="fas fa-plus">Add new task</i>
 <% end %>
 
 
